--- a/file-1.adoc
+++ b/file-1.adoc
@@ -4,3 +4,17 @@
 
 ## third item
 
+= Document Title (Level 0)
+:sectnums:
+:sectnumlevels: 5
+
+== Level 1 Section Title
+
+=== Level 2 Section Title
+
+==== Level 3 Section Title
+
+===== Level 4 Section Title
+
+====== Level 5 Section Title
+
