--- a/file-1.adoc
+++ b/file-1.adoc
@@ -18,3 +18,8 @@
 
 ====== Level 5 Section Title
 
+== Another1 Level 1 Section Title
+
+== Another2 Level 1 Section Title
+
+== Another3 Level 1 Section Title
