--- a/file-1.adoc
+++ b/file-1.adoc
@@ -1,3 +1,12 @@
+
+= My README
+:toc: macro
+:toclevels: 3
+
+Welcome to my readme. This is the table of contents:
+
+toc::[]
+
 # just a test
 
 ## more test heading
