--- a/Resource_ProductOrder_diagram.adoc
+++ b/Resource_ProductOrder_diagram.adoc
@@ -1,17 +1,15 @@
-:png:
-
 [.text-center]
 ifdef::puml[]
 [plantuml, puml, svg]
 ....
-include::diagrams/Resource_ProductOrder.puml[]
+include::{diagrams}/Resource_ProductOrder.puml[]
 ....
 endif::puml[]
 ifdef::svg[]
-image::diagrams/Resource_ProductOrder.svg[]
+image::{diagrams}/Resource_ProductOrder.svg[]
 endif::svg[]
 ifdef::png[]
-image::../diagrams/Resource_ProductOrder.png[]
+image::{diagrams}/Resource_ProductOrder.png[]
 endif::png[]
 [.text-center]
 Figure {counter:figure} - ProductOrder
